<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@null"
        android:src="@drawable/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="17dp">

            <EditText
                android:id="@+id/edtSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@null"
                android:background="@drawable/border_grey"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="5dp"
                android:hint="@string/search_store"
                android:inputType="text"
                android:padding="15dp"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerAd"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/edtSearch" />

            <me.relex.circleindicator.CircleIndicator3
                android:id="@+id/indicator"
                android:layout_width="match_parent"
                app:ci_drawable="@drawable/custom_indicator"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/viewPagerAd" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutExclusive"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvExclusiveOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exclusive_offer"
                    android:textSize="23sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSeeAllExclusive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/splash"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="@id/tvExclusiveOffer"
                    app:layout_constraintBottom_toBottomOf="@id/tvExclusiveOffer"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvExclusiveOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvExclusiveOffer"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutBestSelling"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutExclusive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvBestSelling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_selling"
                    android:textSize="23sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSeeAllBestSelling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/splash"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="@id/tvBestSelling"
                    app:layout_constraintBottom_toBottomOf="@id/tvBestSelling"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvBestSelling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvBestSelling"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutWoolenProducts"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/layoutBestSelling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvWoolenProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woolen_products"
                    android:textSize="23sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvSeeAllWoolenProducts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textColor="@color/splash"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="@id/tvWoolenProducts"
                    app:layout_constraintBottom_toBottomOf="@id/tvWoolenProducts"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcvWoolenProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintTop_toBottomOf="@+id/tvWoolenProducts"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>